carrusel,title,images

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>bungalos aguapey</title>
+    <title>bungalows aguapey</title>
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+  </head>
 <body>
     <!--comienzo del body-->
 <body>
@@ -50,6 +53,8 @@
   
       
   <main>
+  <div class="container_main">
+    <!--carrusel-->
 <section class="carrusel">
 
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -60,13 +65,13 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="imagenes/ext.jpg" class="d-block w-100" alt="...">
+            <img src="imagenes/carrousel1.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="imagenes/ext3.jpg" class="d-block w-100" alt="...">
+            <img src="imagenes/carrousel2 (1).jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="imagenes/ext2.jpg" class="d-block w-100" alt="...">
+            <img src="imagenes/carrousel2 (2).jpeg" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -81,31 +86,71 @@
 
 </section>
 
+<!--informacion general, titulo,parrafos-->
+<section class="quienesSomos">
+<h1 class="title text-center">BIENVENIDOS A BUNGALOWS AGUAPEY</h1>
+<p>Las cabañas se encuentran ubicadas en una zona muy tranquila de Colón, rodeadas de un espacio verde que invita al relax, a solo 5 minutos del centro ,las termas y playas. </p>
+</section>
+<!--alojamiento-->
+<section id="alojamiento">
 
-<section class="quienesSomos"></section>
-BIENVENIDOS A BUNGALOWS AGUAPEY
-Los Bungalows AGUAPEY Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab distinctio magni in architecto? Neque saepe, delectus quia repudiandae nam nostrum quo ratione quod fugit esse! Inventore pariatur suscipit ducimus sint!
-Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus exercitationem nulla illum praesentium ab tempore veritatis excepturi odio officia quod nemo magni, est quo quibusdam, blanditiis sequi esse officiis autem!
+<h2 class="title_2 text-center">SERVICIOS y ALOJAMIENTO</h2>: 
 
-<section id="alojamiento"></section>
+<p> Contamos con 2 bungalows totalmente equipados hasta 6 y 7 personas respectivamente. </p>
 
-alojamiento
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente sunt repellendus cumque est tempora iure odit? Adipisci voluptas blanditiis voluptatibus dolores, sunt consectetur iure perspiciatis deserunt atque ducimus inventore totam.
-<section id="ubicacion"></section>
-UBICACIÓN, CÓMO LLEGAR
-Santa Rosa - La Pampa - Argentina
-Hotel Bungalows se encuentra ubicado a metros de Ruta Nacional N° 5 Km 606,5, en el acceso a Santa Rosa, La Pampa, frente a Casino Club, junto al Motel A.C.A.
-Coordenadas GPS: 36°37.1260'S 64°16.0600'O
-<section id="contacto"></section>
-contacto
+<p>Para su mayor comodidad le ofrecemos: </p>
+<img src="./imagenes/lista _de _prestaciones2.jpg" class="img-fluid img-thumbnail">
 
+<H2>Alojamiento</H2>
+<span class="linea"></span>
+<div class="galeria">
+<a href="" src="">
+  <img src="./imagenes/20191222_104946.jpg" alt="" class="img-galeria img-fluid"></a>
+<a href="" src="">
+  <img src="./imagenes/20191222_104955.jpg" alt="" class="img-galeria img-fluid"></a>
+<a href="" src="">
+  <img src="./imagenes/20191222_105007.jpg" alt="" class="img-galeria img-fluid"></a>
+<a href="" src="">
+  <img src="./imagenes/20191222_105017.jpg" alt="" class="img-galeria img-fluid"></a>
+<a href="" src="">
+  <img src="./imagenes/20191222_105042.jpg" alt="" class="img-galeria img-fluid"></a>
+<a href="" src="">
+  <img src="./imagenes/20191222_105042.jpg" alt="" class="img-galeria img-fluid"></a>
+<a href="" src="">
+  <img src="./imagenes/20191222_105110.jpg" alt="" class="img-galeria img-fluid"></a>
+<a href="" src="">
+  <img src="./imagenes/20191229_185501.jpg" alt="" class="img-galeria img-fluid"></a>
+</div>
+
+
+
+
+
+
+</section>
+<!--ubicacion-->
+<section id="ubicacion">
+<h2 class=" title_2 text-center">UBICACIÓN, CÓMO LLEGAR</h2>
+Ñandubay y Dr. Hussain, Colón, Entre Ríos ,Argentina.
+BUNGALOWS AGUAPEY se encuentra ubicado a metros de la Avenida Pres. Peron <!--se puede agregar mas informacion-->
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3375.832413561725!2d-58.16318678535912!3d-32.20874614224401!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95ae325c88d1397f%3A0x2c1ceb4c51910391!2sBungalows%20aguapey!5e0!3m2!1ses-419!2sar!4v1669474323619!5m2!1ses-419!2sar" width="600" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</section>
+<!--contacto-->
+<section id="contacto">
+
+<h2 class=" title_2 text-center"></h2>contacto</h2>
+</section>
+
+  </div>
+  <!--FOOTER-->
 <footer class="footer">
 
+<p class="text-white">©Bungalows Aguapey  -Todos los derechos recervados 2022</p>
 
-    sasss
+<i class="fa-brands fa-instagram"></i>
 
 </footer>
-<i class="fa-brands fa-instagram"></i>
+
   </main>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> 
 </body>
