--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@6.9.96/css/materialdesignicons.min.css
+    ">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
   </head>
 <body>
-    <!--comienzo del body-->
+    <!--comienzo del body--> 
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-lightnavbar-light ">
@@ -100,27 +102,79 @@
 
 <p>Para su mayor comodidad le ofrecemos: </p>
 <img src="./imagenes/lista _de _prestaciones2.jpg" class="img-fluid img-thumbnail">
+</section>
 
+<div class="overlay">
+  <div class="slideshow">
+    <span class="btn_cerrar">&times;</span>
+    <div class="botones atras">
+      <i class="mdi mdi-arrow-right-circle-outline"></i>
+    </div>
+    <div class="botones adelante">
+      <i class="mdi mdi-arrow-left-circle-outline"></i>
+    </div>
+    <img src="" alt="" id="img_slideshow">
+  </div>
 <H2>Alojamiento</H2>
-<span class="linea"></span>
-<div class="galeria">
-<a href="" src="">
-  <img src="./imagenes/20191222_104946.jpg" alt="" class="img-galeria img-fluid"></a>
-<a href="" src="">
-  <img src="./imagenes/20191222_104955.jpg" alt="" class="img-galeria img-fluid"></a>
-<a href="" src="">
-  <img src="./imagenes/20191222_105007.jpg" alt="" class="img-galeria img-fluid"></a>
-<a href="" src="">
-  <img src="./imagenes/20191222_105017.jpg" alt="" class="img-galeria img-fluid"></a>
-<a href="" src="">
-  <img src="./imagenes/20191222_105042.jpg" alt="" class="img-galeria img-fluid"></a>
-<a href="" src="">
-  <img src="./imagenes/20191222_105042.jpg" alt="" class="img-galeria img-fluid"></a>
-<a href="" src="">
-  <img src="./imagenes/20191222_105110.jpg" alt="" class="img-galeria img-fluid"></a>
-<a href="" src="">
-  <img src="./imagenes/20191229_185501.jpg" alt="" class="img-galeria img-fluid"></a>
+
+<section class="galeria">
+
+<div class="columna">
+  <img src="./imagenes/exterior_arboles.jpg" alt="" class="" data-img-mostrar="0">
+  <img src="./imagenes/exterior_arboles2.jpg" alt="" class="" data-img-mostrar="1">
+  <img src="./imagenes/exterior_chimenea.jpg" alt="" class="" data-img-mostrar="2">
+  <img src="./imagenes/exterior_cochera.jpg" alt="" class="" data-img-mostrar="3">
+  <img src="./imagenes/exterior_cochera2.jpg" alt="" class="" data-img-mostrar="4">
+  
+ 
 </div>
+
+<div class="columna">
+  <img src="./imagenes/exterior_cochera3.jpeg" alt="" class="" data-img-mostrar="5">
+  <img src="./imagenes/exterior_flores.jpg" alt="" class="" data-img-mostrar="6">
+  <img src="./imagenes/exterior_flores2.jpg" alt="" class="" data-img-mostrar="7">
+  <img src="./imagenes/exterior_frente.jpg" alt="" class="" data-img-mostrar="8">
+  <img src="./imagenes/exterior_frente2.jpg" alt="" class="" data-img-mostrar="9">
+ 
+ 
+</div>
+<div class="columna">
+  <img src="./imagenes/exterior_frente3.jpg" alt="" class="" data-img-mostrar="10">
+  <img src="./imagenes/exterior_frente_costado.jpeg" alt="" class="" data-img-mostrar="11">
+  <img src="./imagenes/exterior_frente_costado.jpeg" alt="" class="" data-img-mostrar="12">
+  <img src="./imagenes/exterior_frente_esquina.jpeg" alt="" class="" data-img-mostrar="13">
+  <img src="./imagenes/exterior_frente_post.jpg" alt="" class="" data-img-mostrar="14">
+
+</div>
+<div class="columna">
+  <img src="./imagenes/interior_sofa.jpg" alt="" class="" data-img-mostrar="15">
+  <img src="./imagenes/interior_cam2plaz.jpg" alt="" class="" data-img-mostrar="16">
+  <img src="./imagenes/" alt="" class="" data-img-mostrar="17">
+  <img src="./imagenes/" alt="" class="" data-img-mostrar="18">
+  <img src="./imagenes/" alt="" class="" data-img-mostrar="19">
+ 
+  <div>
+<div class="columna">  
+  <img src="./imagenes/" alt="" class="" data-img-mostrar="20">
+  <img src="./imagenes/" alt="" class="" data-img-mostrar="21">
+  <img src="./imagenes/" alt="" class="" data-img-mostrar="22">
+  <img src="./imagenes/" alt="" class="" data-img-mostrar="23">
+  <img src="./imagenes/" alt="" class="" data-img-mostrar="24">
+ 
+</div>
+<div class="columna">
+  <img src="./imagenes/" alt="" class="" data-img-mostrar="25">
+  <img src="./imagenes/" alt="" class="" data-img-mostrar="26">
+  <img src="./imagenes/" alt="" class="" data-img-mostrar="27">
+  <img src="./imagenes/" alt="" class="" data-img-mostrar="28">
+  <img src="./imagenes/" alt="" class="" data-img-mostrar="29">
+  
+</div>
+</section>
+
+
+
+
 
 
 
@@ -133,7 +187,7 @@
 <h2 class=" title_2 text-center">UBICACIÓN, CÓMO LLEGAR</h2>
 Ñandubay y Dr. Hussain, Colón, Entre Ríos ,Argentina.
 BUNGALOWS AGUAPEY se encuentra ubicado a metros de la Avenida Pres. Peron <!--se puede agregar mas informacion-->
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3375.832413561725!2d-58.16318678535912!3d-32.20874614224401!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95ae325c88d1397f%3A0x2c1ceb4c51910391!2sBungalows%20aguapey!5e0!3m2!1ses-419!2sar!4v1669474323619!5m2!1ses-419!2sar" width="600" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3375.832413561725!2d-58.16318678535912!3d-32.20874614224401!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95ae325c88d1397f%3A0x2c1ceb4c51910391!2sBungalows%20aguapey!5e0!3m2!1ses-419!2sar!4v1669474323619!5m2!1ses-419!2sar" width="600" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="img-fluid"></iframe>
 </section>
 <!--contacto-->
 <section id="contacto">
