--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>bungalows aguapey</title>
 <link rel="stylesheet" href="./css/style.css">
+<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@6.9.96/css/materialdesignicons.min.css">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+
 <script src="/js/script.js" defer></script>  
 </head>
 <body>
@@ -174,8 +177,34 @@
 </section>
 <!--contacto-->
 <section id="contacto">
-<h2 class=" title_2 text-center">CONTACTOS</h2>
+  <h2 class=" title_2 text-center">CONTACTO</h2>
+<div class="contenedor-contacto">
+ <div class="contacto-cel-mail-redes">
+<p>Reservas y Consultas al +54 9 3442 47-0137</p>
+<p>soniahoet@hotmail.com</p>
+<p>Redes</p>
 
+</div>
+<div class="form-contacto">
+<p class="title_2"> FORMULARIO DE CONTACTO</p>
+<form action="https://formspree.io/f/meqnrpad" method="post" class="form">
+
+<div class="form-registro">
+<fieldset><legend>Nombre </legend><input type="text" name="NOMBRE" class="data"></fieldset>
+<fieldset><legend>Apellido </legend><input type="text" name="APELLIDO" class="data"></fieldset>
+<fieldset><legend>Telefono de Contacto</legend><input type="text" name="TELEFONO" class="data"></fieldset>
+<fieldset><legend>Correo Electronico</legend><input type="text" name="CORREO" class="data"></fieldset>
+<fieldset><legend>Mensaje</legend><input type="text" name="CORREO" class="data"></fieldset>
+<input type="submit" value="ENVIAR" class="custom-btn btn-14"></form></div>
+  
+
+
+
+</form>
+</div>
+</div>
+</div>
+</div>
 </section>
 
 </div>
@@ -185,7 +214,7 @@
   <!--FOOTER-->
 <footer class="footer">
 
-<p class="text-white title_2">©BUNGALOWS AGUAPEY  -Todos los derechos reservados 2022</p>
+<p class="text-white title_2 text-center">©BUNGALOWS AGUAPEY  -Todos los derechos reservados 2022</p>
 
 <i class="fa-brands fa-instagram"></i>
 
