--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
 <script src="/js/script.js" defer></script>  
 </head>
@@ -183,10 +184,12 @@
 <p>Reservas y Consultas al +54 9 3442 47-0137</p>
 <p>soniahoet@hotmail.com</p>
 <p>Redes</p>
-
-</div>
+<a href="https://www.facebook.com/BungalowsAguapey" target="_blank"><p>Facebook</p> </a>
+<a href="https://www.google.com.ar/maps/place/Bungalows+aguapey/@-32.2087507,-58.1631868,17z/data=!3m1!4b1!4m5!3m4!1s0x95ae325c88d1397f:0x2c1ceb4c51910391!8m2!3d-32.2087507!4d-58.160998" target="_blank"><p>Google</p></a>
+<a href="https://wa.me/3442470137" target="_blank"><p>WhatsApp</p></a>
+ </div>
 <div class="form-contacto">
-<p class="title_2"> FORMULARIO DE CONTACTO</p>
+<h3 class="title_2"> FORMULARIO DE CONTACTO</h3>
 <form action="https://formspree.io/f/meqnrpad" method="post" class="form">
 
 <div class="form-registro">
@@ -194,8 +197,13 @@
 <fieldset><legend>Apellido </legend><input type="text" name="APELLIDO" class="data"></fieldset>
 <fieldset><legend>Telefono de Contacto</legend><input type="text" name="TELEFONO" class="data"></fieldset>
 <fieldset><legend>Correo Electronico</legend><input type="text" name="CORREO" class="data"></fieldset>
-<fieldset><legend>Mensaje</legend><input type="text" name="CORREO" class="data"></fieldset>
-<input type="submit" value="ENVIAR" class="custom-btn btn-14"></form></div>
+<fieldset><legend>Mensaje</legend><input type="text" name="CORREO" class="data_mensaje"></fieldset>
+<div class="frame"><input type="submit" value="ENVIAR" class="custom-btn btn-7"></div>
+
+
+
+</div>
+
   
 
 
@@ -203,11 +211,8 @@
 </form>
 </div>
 </div>
-</div>
-</div>
 </section>
 
-</div>
 
 </main>
   
