--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-lightnavbar-light ">
             <div class="container d-flex">
-              <a class="navbar-brand me-auto" href="index.html"><img src="./assets/logo_large.png" class="logo" alt="logo-bungalosaguapey" width="130px">
+              <a class="navbar-brand me-auto" href="index.html"><img src="./img/logo_bungalowsaguapey.jpeg" class="logo" alt="logo-bungalosaguapey" width="130px">
             </a>
               
             <button class="navbar-toggler " type="button" 
@@ -37,16 +37,16 @@
               <div class="collapse navbar-collapse flex-grow-0" 
               id="navbarNav">
                 <ul class="navbar-nav">
-                  <li class="nav-item ">
+                  <li class="nav-item  btn-2">
                     <a class="nav-link active text-white" href="index.html">HOME</a>
                   </li>
-                  <li class="nav-item ">
+                  <li class="nav-item btn-2">
                     <a class="nav-link active text-white" href="#alojamiento">ALOJAMIENTOS</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item btn-2">
                     <a class="nav-link active text-white" href="#ubicacion">UBICACION</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item btn-2">
                     <a class="nav-link active text-white" href="#contacto">CONTACTO</a>
                   </li>
                 </ul>
@@ -170,8 +170,8 @@
 <section id="ubicacion" >
 <div class="section_lugar">
 <h2 class="title_2 text-center ">UBICACIÓN, CÓMO LLEGAR</h2>
-<p>Ñandubay y Dr. Hussain, Colón, Entre Ríos ,Argentina.</p>
-<p>BUNGALOWS AGUAPEY se encuentra ubicado a metros de la Avenida Pres. Peron </p><!--se puede agregar mas informacion-->
+<p>Ñandubay y Dr. Hussain, Colón, Entre Ríos, Argentina.</p>
+<p>BUNGALOWS AGUAPEY se encuentra ubicado a metros de la Avenida Pres. Perón </p><!--se puede agregar mas informacion-->
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3375.832413561725!2d-58.16318678535912!3d-32.20874614224401!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95ae325c88d1397f%3A0x2c1ceb4c51910391!2sBungalows%20aguapey!5e0!3m2!1ses-419!2sar!4v1669474323619!5m2!1ses-419!2sar" width="90%" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="">
 </iframe>
 </div>
@@ -181,23 +181,23 @@
   <h2 class=" title_2 text-center">CONTACTO</h2>
 <div class="contenedor-contacto">
  <div class="contacto-cel-mail-redes">
-<p>Reservas y Consultas al +54 9 3442 47-0137</p>
-<p>soniahoet@hotmail.com</p>
-<p>Redes</p>
-<a href="https://www.facebook.com/BungalowsAguapey" target="_blank"><p>Facebook</p> </a>
-<a href="https://www.google.com.ar/maps/place/Bungalows+aguapey/@-32.2087507,-58.1631868,17z/data=!3m1!4b1!4m5!3m4!1s0x95ae325c88d1397f:0x2c1ceb4c51910391!8m2!3d-32.2087507!4d-58.160998" target="_blank"><p>Google</p></a>
-<a href="https://wa.me/3442470137" target="_blank"><p>WhatsApp</p></a>
+<p class="p_contacto">Reservas y Consultas al Cel. +54 9 3442 47-0137</p>
+<a href="mailto:soniahoet@hotmail.com" ><p class="p_contacto">soniahoet@hotmail.com</p></a>
+<p class="p_contacto">Redes</p>
+<a href="https://www.facebook.com/BungalowsAguapey" target="_blank"><p class="p_contacto">Facebook</p> </a>
+<a href="https://www.google.com.ar/maps/place/Bungalows+aguapey/@-32.2087507,-58.1631868,17z/data=!3m1!4b1!4m5!3m4!1s0x95ae325c88d1397f:0x2c1ceb4c51910391!8m2!3d-32.2087507!4d-58.160998" target="_blank"><p class="p_contacto">Google</p></a>
+<a href="https://wa.me/3442470137" target="_blank"><p class="p_contacto">WhatsApp</p></a>
  </div>
 <div class="form-contacto">
-<h3 class="title_2"> FORMULARIO DE CONTACTO</h3>
+<p class="title_form ">FORMULARIO DE CONTACTO </p>
 <form action="https://formspree.io/f/meqnrpad" method="post" class="form">
 
 <div class="form-registro">
-<fieldset><legend>Nombre </legend><input type="text" name="NOMBRE" class="data"></fieldset>
-<fieldset><legend>Apellido </legend><input type="text" name="APELLIDO" class="data"></fieldset>
-<fieldset><legend>Telefono de Contacto</legend><input type="text" name="TELEFONO" class="data"></fieldset>
-<fieldset><legend>Correo Electronico</legend><input type="text" name="CORREO" class="data"></fieldset>
-<fieldset><legend>Mensaje</legend><input type="text" name="CORREO" class="data_mensaje"></fieldset>
+<fieldset><legend> </legend><input type="text" name="NOMBRE" class="data"><p>Nombre</p></fieldset>
+<fieldset><legend> </legend><input type="text" name="APELLIDO" class="data"><p>Apellido</p></fieldset>
+<fieldset><legend></legend><input type="text" name="TELEFONO" class="data"><p>Telefono de Contacto</p></fieldset>
+<fieldset><legend></legend><input type="text" name="CORREO" class="data"><p>Correo Electronico</p></fieldset>
+<fieldset><legend></legend><input type="text" name="CORREO" class="data_mensaje"><p>Mensaje</p></fieldset>
 <div class="frame"><input type="submit" value="ENVIAR" class="custom-btn btn-7"></div>
 
 
@@ -221,7 +221,7 @@
 
 <p class="text-white title_2 text-center">©BUNGALOWS AGUAPEY  -Todos los derechos reservados 2022</p>
 
-<i class="fa-brands fa-instagram"></i>
+
 
 </footer>
 
