--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                     <a class="nav-link active text-white" href="index.html">HOME</a>
                   </li>
                   <li class="nav-item btn-1">
-                    <a class="nav-link active text-white" href="#alojamiento">ALOJAMIENTOS</a>
+                    <a class="nav-link active text-white" href="#alojamiento">ALOJAMIENTO</a>
                   </li>
                   <li class="nav-item btn-1">
-                    <a class="nav-link active text-white" href="#ubicacion">UBICACION</a>
+                    <a class="nav-link active text-white" href="#ubicacion">UBICACIÓN</a>
                   </li>
                   <li class="nav-item btn-1">
                     <a class="nav-link active text-white" href="#contacto">CONTACTO</a>
@@ -66,7 +66,7 @@
     <!--informacion general, titulo,parrafos-->
 <section class="quienesSomos">
   <h1 class="title text-center">BUNGALOWS AGUAPEY</h1>
-  <p class="title text-center">Colon - Entre Rios</p>
+  <p class="title text-center">Colón - Entre Rios</p>
   </section>
   <div class="container_main">
     <!--carrusel-->
