--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 <div class="section_lugar">
 <h2 class="title_2 text-center ">UBICACIÓN, CÓMO LLEGAR</h2>
 <p>Ñandubay y Dr. Hussain, Colón, Entre Ríos, Argentina.</p>
-<p>BUNGALOWS AGUAPEY se encuentra ubicado a metros de la Avenida Pres. Perón </p><!--se puede agregar mas informacion-->
+<p>BUNGALOWS AGUAPEY se encuentra ubicado a metros de la Ruta 130 .</p><!--se puede agregar mas informacion-->
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3375.832413561725!2d-58.16318678535912!3d-32.20874614224401!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95ae325c88d1397f%3A0x2c1ceb4c51910391!2sBungalows%20aguapey!5e0!3m2!1ses-419!2sar!4v1669474323619!5m2!1ses-419!2sar" width="90%" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="">
 </iframe>
 </div>
@@ -211,7 +211,7 @@
 <p class="p_contacto">Redes</p>
 <a href="https://www.facebook.com/BungalowsAguapey" target="_blank"><p class="p_contacto"><img src="./img/facebook.svg" class="img_icono"> Facebook</p> </a>
 <a href="https://www.google.com.ar/maps/place/Bungalows+aguapey/@-32.2087507,-58.1631868,17z/data=!3m1!4b1!4m5!3m4!1s0x95ae325c88d1397f:0x2c1ceb4c51910391!8m2!3d-32.2087507!4d-58.160998" target="_blank"><p class="p_contacto"><img src="./img/google.svg" class="img_icono"> Google</p></a>
-<a href="https://wa.me/3442470137" target="_blank"><p class="p_contacto"><img src="./img/whatsapp.svg" class="img_icono"> WhatsApp</p></a>
+<a href="https://wa.me/3442470137" target="_blank"><p class="p_contacto" style="text-decoration:none" ><img src="./img/whatsapp.svg" class="img_icono"> WhatsApp</p></a>
  </div>
  
 <div class="form-contacto">
@@ -222,7 +222,7 @@
 <fieldset><legend> </legend><input type="text" name="NOMBRE" class="data"><p>Nombre</p></fieldset>
 <fieldset><legend> </legend><input type="text" name="APELLIDO" class="data"><p>Apellido</p></fieldset>
 <fieldset><legend></legend><input type="text" name="TELEFONO" class="data"><p>Telefono de Contacto</p></fieldset>
-<fieldset><legend></legend><input type="text" name="CORREO" class="data"><p>Correo Electronico</p></fieldset>
+<fieldset><legend></legend><input type="text" name="CORREO" class="data"><p>Correo Electrónico</p></fieldset>
 <fieldset><legend></legend><input type="text" name="CORREO" class="data_mensaje"><p>Mensaje</p></fieldset>
 <div class="frame"><input type="submit" value="ENVIAR" class="custom-btn btn-7"></div>
 
@@ -245,9 +245,9 @@
   <!--FOOTER-->
 <footer class="footer">
 
-<p class="text-white title_2 text-center">©BUNGALOWS AGUAPEY  -Todos los derechos reservados 2022</p>
+<p class="text-white title_2 text-center">©BUNGALOWS AGUAPEY - Todos los derechos reservados 2022</p>
 
-<p class="text-white title_2 text-center">Homologado por la provincia de Entre Rios </p>
+<p class="text-white title_2 text-center">Homologado por la Municipalidad de Colón </p>
 
 </footer>
 
