modif de imagenes, ceo , etc

--- a/index.html
+++ b/index.html
@@ -4,20 +4,15 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="BungalowsAguapey" content="Las cabañas se encuentran ubicadas en una zona muy tranquila de Colón, rodeadas de un espacio verde que invita al relax, a solo 5 minutos del centro, las termas y playas"></head>
 <title>bungalows aguapey</title>
 <link rel="stylesheet" href="./css/style.css">
 <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@6.9.96/css/materialdesignicons.min.css">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Nerko+One&family=Orelega+One&family=Roboto:wght@400;700&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-<script src="https://kit.fontawesome.com/5cdf99673a.js" crossorigin="anonymous" defer></script>
 <script src="/js/script.js" defer></script>  
 
 </head>
@@ -134,28 +129,28 @@
 <section class="galeria">
 
 <div class="columna">
-  <img src="./img/1.jpg"  class="" data-img-mostrar="0">
-  <img src="./img/2.jpg"  class="" data-img-mostrar="1">
+  <img src="./img/1.jpg"  class=""  alt="casa1"data-img-mostrar="0">
+  <img src="./img/2.jpg"  class=""  alt="casa1"data-img-mostrar="1">
   
 </div>
 <div class="columna">
-  <img src="./img/3.jpg"  class="" data-img-mostrar="2">
-  <img src="./img/4.jpg" class="" data-img-mostrar="3">
+  <img src="./img/3.jpg"  class=""  alt="casa1"data-img-mostrar="2">
+  <img src="./img/4.jpg" class=""  alt="casa1"data-img-mostrar="3">
  
 </div>
 <div class="columna">
-  <img src="./img/5.jpg"  class="" data-img-mostrar="4">
-  <img src="./img/6.jpg"  class="" data-img-mostrar="5">
+  <img src="./img/5.jpg"  class=""  alt="casa1"data-img-mostrar="4">
+  <img src="./img/6.jpg"  class=""  alt="casa1"data-img-mostrar="5">
   
 </div>
 <div class="columna">
-  <img src="./img/7.jpg"  class="" data-img-mostrar="6">
-  <img src="./img/8.jpg"  class="" data-img-mostrar="7">
+  <img src="./img/7.jpg"  class=""  alt="casa1"data-img-mostrar="6">
+  <img src="./img/8.jpg"  class=""  alt="casa1"data-img-mostrar="7">
 
 </div>
 <div class="columna">  
-  <img src="./img/9.jpg"  class="" data-img-mostrar="8">
-  <img src="./img/10.jpg"  class="" data-img-mostrar="9">
+  <img src="./img/9.jpg"  class=""  alt="casa1"data-img-mostrar="8">
+  <img src="./img/10.jpg"  class="" alt="casa1" data-img-mostrar="9">
 
 </div>
 </section>
@@ -163,28 +158,28 @@
 <div><p class="subtitle text-center"> Cabaña hasta 7 personas</p></div>
 <section class="galeria2">
 <div class="columna">
-    <img src="./img/11.jpg"  class="" data-img-mostrar="10">
-    <img src="./img/12.jpg"  class="" data-img-mostrar="11">
+    <img src="./img/11.jpg"  class="" alt="casa2" data-img-mostrar="10">
+    <img src="./img/12.jpg"  class=""  alt="casa2"data-img-mostrar="11">
     
 </div>
 <div class="columna">
-    <img src="./img/13.jpg"  class="" data-img-mostrar="12">
-    <img src="./img/14.jpg" class="" data-img-mostrar="13">
+    <img src="./img/13.jpg"  class="" alt="casa2" data-img-mostrar="12">
+    <img src="./img/14.jpg" class="" alt="casa2" data-img-mostrar="13">
    
 </div>
 <div class="columna">
-    <img src="./img/15.jpg"  class="" data-img-mostrar="14">
-    <img src="./img/16.jpg"  class="" data-img-mostrar="15">
+    <img src="./img/15.jpg"  class=""  alt="casa2"data-img-mostrar="14">
+    <img src="./img/16.jpg"  class=""  alt="casa2"data-img-mostrar="15">
     
 </div>
 <div class="columna">
-    <img src="./img/17.jpg"  class="" data-img-mostrar="16">
-    <img src="./img/18.jpg"  class="" data-img-mostrar="17">
+    <img src="./img/17.jpg"  class="" alt="casa2" data-img-mostrar="16">
+    <img src="./img/18.jpg"  class=""  alt="casa2"data-img-mostrar="17">
 
 </div>
 <div class="columna">  
-    <img src="./img/19.jpg"  class="" data-img-mostrar="18">
-    <img src="./img/20.jpg"  class="" data-img-mostrar="19">
+    <img src="./img/19.jpg"  class="" alt="casa2" data-img-mostrar="18">
+    <img src="./img/20.jpg"  class=""  alt="casa2"data-img-mostrar="19">
 
 </div>
 </section>
@@ -207,11 +202,11 @@
 <div class="contenedor-contacto">
  <div class="contacto-cel-mail-redes">
 <p class="p_contacto"><img src="./img/phone-solid.svg" class="img_icono">Reservas y Consultas al Cel. +54 9 3442 47-0137</p>
-<a href="mailto:soniahoet@hotmail.com" ><p class="p_contacto"><img src="./img/envelope-solid.svg" class="img_icono"> soniahoet@hotmail.com</p></a>
+<a href="mailto:soniahoet@hotmail.com"class="p_contacto" ><p class="hotmail"><img src="./img/envelope-solid.svg" class="img_icono"> soniahoet@hotmail.com</p></a>
 <p class="p_contacto">Redes</p>
-<a href="https://www.facebook.com/BungalowsAguapey" target="_blank"><p class="p_contacto"><img src="./img/facebook.svg" class="img_icono"> Facebook</p> </a>
-<a href="https://www.google.com.ar/maps/place/Bungalows+aguapey/@-32.2087507,-58.1631868,17z/data=!3m1!4b1!4m5!3m4!1s0x95ae325c88d1397f:0x2c1ceb4c51910391!8m2!3d-32.2087507!4d-58.160998" target="_blank"><p class="p_contacto"><img src="./img/google.svg" class="img_icono"> Google</p></a>
-<a href="https://wa.me/3442470137" target="_blank"><p class="p_contacto" style="text-decoration:none" ><img src="./img/whatsapp.svg" class="img_icono"> WhatsApp</p></a>
+<a href="https://www.facebook.com/BungalowsAguapey" target="_blank" class="p_contacto"><p class="facebook"><img src="./img/facebook.svg" class="img_icono"> Facebook</p> </a>
+<a href="https://www.google.com.ar/maps/place/Bungalows+aguapey/@-32.2087507,-58.1631868,17z/data=!3m1!4b1!4m5!3m4!1s0x95ae325c88d1397f:0x2c1ceb4c51910391!8m2!3d-32.2087507!4d-58.160998" target="_blank" class="p_contacto "><p class="google"><img src="./img/google.svg" class="img_icono"> Google</p></a>
+<a href="https://wa.me/3442470137" target="_blank" class="p_contacto "><p class="whatsapp"><img src="./img/whatsapp.svg" class="img_icono "> WhatsApp</p></a>
  </div>
  
 <div class="form-contacto">
